--- a/mobile-menu.css
+++ b/mobile-menu.css
@@ -33,7 +33,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: all 1s ease-in-out;
+  transition: all .5s ease;
 }
 .hamburger .lines:before,
 .hamburger .lines:after {
@@ -54,6 +54,6 @@
 .hamburger-wrapper .menu-toggle:checked + .hamburger .lines:before,
 .hamburger-wrapper .menu-toggle:checked + .hamburger .lines:after {
   top: 0;
-  /* transform-origin: 0% 100%; */
   transform: rotate(90deg);
 }
+
