Started mobile stlying for the page. Placed background shape for mobile.

--- a/style.css
+++ b/style.css
@@ -16,16 +16,18 @@ html {
   box-sizing: border-box;
   font-size: 10px;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 75px;
   padding: 1rem 5rem;
-  margin: 7rem 0 3rem 0;
-  background-color: red;
+  margin: 1rem 0 3rem 0;
 }
 .background-shape {
   background-color: var(--light-grayish-blue);
@@ -33,17 +35,93 @@ header {
   top: 0;
   right: 0;
   width: 50vw;
-  height: 40vh;
+  height: 50vh;
   border-bottom-left-radius: 10rem;
   z-index: -1;
 }
 .logo img {
-  width: 75px;
-  height: 75px;
-}
-.top-nav {
-  
+  width: 20px;
+  height: 20px;
 }
 ul {
   display: none;
+}
+/* MOBILE MENU STYLES */
+.hamburger-wrapper {
+  position: relative;
+  width: 40px;
+  height: 40px;
+}
+.top-nav .menu-toggle {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 2;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  opacity: 0;
+}
+.top-nav .hamburger {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  width: 40px;
+  height: 40px;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hamburger .lines {
+  position: relative;
+  width: 100%;
+  height: 2px;
+  background: var(--very-dark-blue);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.5s ease;
+}
+.hamburger .lines:before,
+.hamburger .lines:after {
+  content: '';
+  position: absolute;
+  top: -5px;
+  width: 100%;
+  height: 2px;
+  background: inherit;
+  z-index: 1;
+}
+.hamburger .lines:after {
+  top: 5px;
+}
+.hamburger-wrapper .menu-toggle:checked + .hamburger .lines {
+  transform: rotate(135deg);
+}
+.hamburger-wrapper .menu-toggle:checked + .hamburger .lines:before,
+.hamburger-wrapper .menu-toggle:checked + .hamburger .lines:after {
+  top: 0;
+  transform: rotate(90deg);
+}
+main {
+  display: flex;
+  flex-direction: column;
+}
+.header-img {
+  text-align: right;
+}
+.header-img img {
+  width: 90%;
+  
+}
+
+@media all and (min-width: 769px){
+  .hamburger-wrapper {
+    display: none;
+  }
+  .header {
+    padding-top: 10px;
+  }
 }
