--- a/mobile-menu.css
+++ b/mobile-menu.css
@@ -1,59 +1,60 @@
-.hamburger-wrapper {
-  position: relative;
-  width: 50px;
-  height: 50px;
+@media all and (max-width: 768px) {
+  .hamburger-wrapper {
+    position: relative;
+    width: 50px;
+    height: 50px;
+  }
+  .top-nav .menu-toggle {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 2;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    opacity: 0;
+  }
+  .top-nav .hamburger {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    width: 50px;
+    height: 50px;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .hamburger .lines {
+    position: relative;
+    width: 100%;
+    height: 2px;
+    background: var(--very-dark-blue);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease;
+  }
+  .hamburger .lines:before,
+  .hamburger .lines:after {
+    content: '';
+    position: absolute;
+    top: -10px;
+    width: 100%;
+    height: 2px;
+    background: inherit;
+    z-index: 1;
+  }
+  .hamburger .lines:after {
+    top: 10px;
+  }
+  .hamburger-wrapper .menu-toggle:checked + .hamburger .lines {
+    transform: rotate(135deg);
+  }
+  .hamburger-wrapper .menu-toggle:checked + .hamburger .lines:before,
+  .hamburger-wrapper .menu-toggle:checked + .hamburger .lines:after {
+    top: 0;
+    transform: rotate(90deg);
+  }
 }
-.top-nav .menu-toggle {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 2;
-  cursor: pointer;
-  width: 50px;
-  height: 50px;
-  opacity: 0;
-}
-.top-nav .hamburger {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  width: 50px;
-  height: 50px;
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.hamburger .lines {
-  position: relative;
-  width: 100%;
-  height: 2px;
-  background: var(--very-dark-blue);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all .5s ease;
-}
-.hamburger .lines:before,
-.hamburger .lines:after {
-  content: '';
-  position: absolute;
-  top: -10px;
-  width: 100%;
-  height: 2px;
-  background: inherit;
-  z-index: 1;
-}
-.hamburger .lines:after {
-  top: 10px;
-}
-.hamburger-wrapper .menu-toggle:checked + .hamburger .lines {
-  transform: rotate(135deg);
-}
-.hamburger-wrapper .menu-toggle:checked + .hamburger .lines:before,
-.hamburger-wrapper .menu-toggle:checked + .hamburger .lines:after {
-  top: 0;
-  transform: rotate(90deg);
-}
-
