--- a/style.css
+++ b/style.css
@@ -14,12 +14,15 @@
 /* GLOBAL STYLES */
 html {
   box-sizing: border-box;
-  font-size: 10px;
+  font-size: 62.5%;
 }
 *,
 *:before,
 *:after {
   box-sizing: inherit;
+}
+h1, h2, h3 {
+  font-family: var(--secondary-font-family);
 }
 header {
   display: flex;
@@ -116,6 +119,13 @@ main {
 .content { 
   padding: 3rem;
 }
+.content h1 {
+  color: var(--grayish-blue);
+  font-size: 1.7rem;
+  text-transform: uppercase;
+  letter-spacing: .5rem;
+}
+
 
 
 
