added mobile first styles

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed|Barlow:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed:400,700|Barlow:400&display=swap');
 
 /* CSS VARIABLES */
 :root {
@@ -21,7 +21,7 @@ html {
 *:after {
   box-sizing: inherit;
 }
-h1, h2, h3 {
+h1, h2 {
   font-family: var(--secondary-font-family);
 }
 header {
@@ -29,7 +29,7 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 75px;
-  padding: 1rem 5rem;
+  padding: 1rem 3rem;
   margin: 1rem 0 3rem 0;
 }
 .background-shape {
@@ -38,8 +38,8 @@ header {
   top: 0;
   right: 0;
   width: 50%;
-  height: 105vw;
-  max-height: 625px;
+  height: 110vw;
+  max-height: 700px;
   border-bottom-left-radius: 5rem;
   z-index: -1;
 }
@@ -117,15 +117,68 @@ main {
   max-width: 100%;
 }
 .content { 
-  padding: 3rem;
+  margin-top: 7rem;
+  padding: 0 3rem;
 }
 .content h1 {
   color: var(--grayish-blue);
-  font-size: 1.7rem;
+  font-family: var(--secondary-font-family);
+  font-size: 1.6rem;
   text-transform: uppercase;
   letter-spacing: .5rem;
+  font-weight: 400;
+  margin: 0;
 }
-
+.content h1 .highlight {
+  padding: .25rem 1rem;
+  background-color: var(--very-dark-blue);
+  color: #fff;
+  letter-spacing: .1rem;
+  border-radius: 15px;
+  margin-right: 1rem;
+  font-weight: 700;
+}
+.content h2 {
+  color: var(--very-dark-blue);
+  text-transform: uppercase;
+  font-size: 4rem;
+  font-weight: 700;
+  margin: 1.5rem 0;
+  line-height: 4rem;
+}
+.content h3 {
+  font-family: var(--main-font-family);
+  font-size: 2rem;
+  color: var(--dark-grayish-blue);
+}
+.demo {
+  margin: 4rem 0;
+}
+.demo p {
+  color: var(--grayish-blue);
+  font-family: var(--secondary-font-family);
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  letter-spacing: .2rem;
+  font-weight: 400;
+}
+.demo p a {
+  padding: 1.25rem 2rem;
+  background-color: var(--primary-red);
+  color: #fff;
+  text-decoration: none;
+  letter-spacing: .1rem;
+  border-radius: 5px;
+  margin-right: 1rem;
+  font-weight: 700;
+}
+footer {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: var(--grayish-blue);
+  text-align: center;
+}
 
 
 
