--- a/style.css
+++ b/style.css
@@ -29,13 +29,12 @@ ul {
   margin: 0;
 }
 header {
-  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 75px;
   padding: 1rem 3rem;
-  margin: 1rem 0 3rem 0;
+  margin: 0 0 3rem 0;
 }
 
 /* MOBILE STYLES */
@@ -127,20 +126,16 @@ footer {
   margin-bottom: 2rem;
 }
 /* MOBILE MENU STYLES */
-
 .top-nav .menu-toggle {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 1;
+  right: 1;
   z-index: 2;
-  cursor: pointer;
   width: 40px;
   height: 40px;
   opacity: 0;
 }
 .top-nav .hamburger {
-  position: relative;
-  top: 0;
   z-index: 1;
   width: 40px;
   height: 40px;
@@ -154,9 +149,6 @@ footer {
   width: 100%;
   height: 2px;
   background: var(--very-dark-blue);
-  display: flex;
-  align-items: center;
-  justify-content: center;
   transition: all 0.4s ease;
 }
 .hamburger .lines:before,
@@ -233,6 +225,31 @@ footer {
   opacity: 1;
 }
 
+@media all and (max-width: 320px){
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    text-align: center;
+  }
+  .content h1 {
+    letter-spacing: .2rem;
+  }
+  .demo {
+    margin: 2rem 0;
+  }
+    .demo p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .demo p a {
+    margin-bottom: 1rem;
+    margin-right: 0;
+    width: 60%;
+    text-align: center;
+  }
+}
 
 @media all and (min-width: 769px){
   .hamburger-wrapper {
