--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,21 @@
-/* CSS VARIABLES */
-:root {
-  --main-font-family: 'Barlow', sans-serif;
-  --secondary-font-family: 'Barlow Condensed', sans-serif;
-  --primary-red: hsl(0, 100%, 68%);
-  --very-dark-blue: hsl(230, 29%, 20%);
-  --dark-grayish-blue: hsl(230, 11%, 40%);
-  --grayish-blue: hsl(231, 7%, 65%);
-  --light-grayish-blue: hsl(207, 33%, 95%);
-}
-
-/* GLOBAL STYLES */
 html {
   box-sizing: border-box;
   font-size: 62.5%;
 }
-*,
-*:before,
-*:after {
+
+*, *:before, *:after {
   box-sizing: inherit;
 }
+
 h1, h2 {
-  font-family: var(--secondary-font-family);
+  font-family: "Barlow Condensed", sans-serif;
 }
+
 ul {
   padding: 0;
   margin: 0;
 }
+
 header {
   display: flex;
   justify-content: space-between;
@@ -34,9 +24,8 @@ header {
   margin: 3vw 10vw;
 }
 
-/* MOBILE STYLES */
 .background-shape {
-  background-color: var(--light-grayish-blue);
+  background-color: #eef3f6;
   position: absolute;
   top: 0;
   right: 0;
@@ -46,10 +35,12 @@ header {
   border-bottom-left-radius: 5rem;
   z-index: -1;
 }
+
 .logo img {
   width: 30px;
   height: 30px;
 }
+
 main {
   display: flex;
   flex-direction: column;
@@ -58,29 +49,21 @@ main {
 .header-img img {
   width: 100%;
 }
-.content { 
+
+.content {
   margin: 10vw;
 }
 .content h1 {
-  color: var(--grayish-blue);
-  font-family: var(--secondary-font-family);
+  color: #a0a1ac;
+  font-family: #eef3f6;
   font-size: 1.6rem;
   text-transform: uppercase;
-  letter-spacing: .5rem;
+  letter-spacing: 0.5rem;
   font-weight: 400;
   margin: 0;
 }
-.content h1 .highlight {
-  padding: .25rem 1rem;
-  background-color: var(--very-dark-blue);
-  color: #fff;
-  letter-spacing: .1rem;
-  border-radius: 15px;
-  margin-right: 1rem;
-  font-weight: 700;
-}
 .content h2 {
-  color: var(--very-dark-blue);
+  color: #242942;
   text-transform: uppercase;
   font-size: 4rem;
   font-weight: 700;
@@ -88,41 +71,53 @@ main {
   line-height: 4rem;
 }
 .content h3 {
-  font-family: var(--main-font-family);
+  font-family: "Barlow", sans-serif;
   font-size: 2rem;
-  color: var(--dark-grayish-blue);
+  color: #5b5f71;
 }
+
+.highlight {
+  padding: 0.25rem 1rem;
+  background-color: #242942;
+  color: #fff;
+  letter-spacing: 0.1rem;
+  border-radius: 15px;
+  margin-right: 1rem;
+  font-weight: 700;
+}
+
 .demo {
   margin: 4rem 0;
 }
 .demo p {
-  color: var(--grayish-blue);
-  font-family: var(--secondary-font-family);
+  color: #a0a1ac;
+  font-family: "Barlow Condensed", sans-serif;
   font-size: 1.3rem;
   text-transform: uppercase;
-  letter-spacing: .2rem;
+  letter-spacing: 0.2rem;
   font-weight: 400;
 }
 .demo p a {
   padding: 1.25rem 2rem;
-  background-color: var(--primary-red);
+  background-color: #ff5c5c;
   color: #fff;
   text-decoration: none;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   border-radius: 5px;
   margin-right: 1rem;
   font-weight: 700;
   opacity: 1;
 }
+
 footer {
   display: flex;
   justify-content: center;
   align-content: center;
-  color: var(--grayish-blue);
+  color: #a0a1ac;
   text-align: center;
   margin: 5vw;
 }
-/* MOBILE MENU STYLES */
+
 .top-nav .menu-toggle {
   position: absolute;
   top: 1;
@@ -137,20 +132,21 @@ footer {
   width: 40px;
   height: 40px;
   padding: 1rem;
-  display: flex;
+  display: flex j;
   justify-content: center;
   align-items: center;
 }
+
 .hamburger .lines {
   position: relative;
   width: 100%;
   height: 2px;
-  background: var(--very-dark-blue);
+  background: #242942;
   transition: all 0.4s ease;
 }
-.hamburger .lines:before,
-.hamburger .lines:after {
-  content: '';
+
+.hamburger .lines:before, .hamburger .lines:after {
+  content: "";
   position: absolute;
   top: -5px;
   width: 100%;
@@ -158,17 +154,20 @@ footer {
   background: inherit;
   z-index: 1;
 }
+
 .hamburger .lines:after {
   top: 5px;
 }
+
 .menu-toggle:checked + .hamburger .lines {
   transform: rotate(135deg);
 }
-.menu-toggle:checked + .hamburger .lines:before,
-.menu-toggle:checked + .hamburger .lines:after {
+
+.menu-toggle:checked + .hamburger .lines:before, .menu-toggle:checked + .hamburger .lines:after {
   top: 0;
   transform: rotate(90deg);
 }
+
 .top-nav .mobile-menu-wrapper {
   position: fixed;
   top: 0;
@@ -178,12 +177,14 @@ footer {
   display: flex;
   justify-content: center;
 }
+
 .top-nav .mobile-menu {
   width: 80%;
   visibility: hidden;
   opacity: 0;
-  transition: all .4s ease;
+  transition: all 0.4s ease;
 }
+
 .top-nav .mobile-menu ul {
   margin-top: 100px;
   padding: 1.5rem 2rem 0 2rem;
@@ -191,38 +192,43 @@ footer {
   background-color: white;
   list-style: none;
   border-radius: 5px;
-  box-shadow: 2px 2px 12px hsl(230, 29%, 20%, .3);
+  box-shadow: 2px 2px 12px rgba(36, 41, 66, 0.3);
 }
+
 .top-nav .mobile-menu ul li {
-  font-family: var(--secondary-font-family);
+  font-family: "Barlow Condensed", sans-serif;
   font-weight: 700;
   font-size: 1.5rem;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   text-transform: uppercase;
-  color: var(--very-dark-blue);
+  color: #242942;
 }
+
 .top-nav .mobile-menu ul li a {
   display: block;
   width: 100%;
   height: 100%;
-  color: var(--dark-grayish-blue);
+  color: #5b5f71;
   text-decoration: none;
   padding: 1rem 25vw;
 }
+
 .top-nav .mobile-menu ul li:last-child {
   padding: 1.5rem 0;
   margin-top: 1.5rem;
-  border-top: solid 1px var(--light-grayish-blue);
+  border-top: solid 1px #eef3f6;
 }
+
 .top-nav .mobile-menu ul li:last-child a {
-  color: var(--grayish-blue);
+  color: #a0a1ac;
 }
+
 .top-nav .menu-toggle:checked ~ .mobile-menu-wrapper .mobile-menu {
   visibility: visible;
   opacity: 1;
 }
 
-@media all and (max-width: 370px){
+@media all and (max-width: 370px) {
   .content {
     display: flex;
     flex-direction: column;
@@ -230,12 +236,13 @@ footer {
     text-align: center;
   }
   .content h1 {
-    letter-spacing: .2rem;
+    letter-spacing: 0.2rem;
   }
+
   .demo {
     margin: 2rem 0;
   }
-    .demo p {
+  .demo p {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -247,19 +254,19 @@ footer {
     text-align: center;
   }
 }
-
 @media all and (min-width: 700px) {
   .background-shape {
     width: 50vw;
     height: 30vw;
-    max-height: 500px
+    max-height: 500px;
   }
+
   .top-nav .hamburger, .top-nav .menu-toggle {
     display: none;
   }
+
   .top-nav .mobile-menu-wrapper {
     position: relative;
-
   }
   .top-nav .mobile-menu {
     visibility: visible;
@@ -276,6 +283,8 @@ footer {
   }
   .top-nav .mobile-menu ul li a {
     padding: 1rem 2rem;
+    color: #a0a1ac;
+    text-decoration: none;
   }
   .top-nav .mobile-menu ul li a:hover {
     cursor: pointer;
@@ -287,42 +296,47 @@ footer {
     border: none;
     position: relative;
   }
+
   .top-nav .mobile-menu ul li:last-child::before {
     content: "";
     height: 5px;
     width: 5px;
-    background-color: var(--grayish-blue);
+    background-color: #a0a1ac;
     border-radius: 50%;
     display: inline-block;
     margin: 1.5rem 0;
     position: absolute;
     left: 0;
   }
+
   main {
     flex-direction: row-reverse;
     justify-content: space-between;
   }
-main .content {
-  margin: 3vw 10vw;
-}
-.demo p a:hover {
-  opacity: 0.75;
-  transition: opacity 1s;
-}
-.demo p a:not( :hover ) {
-  opacity: 1;
-  transition: opacity 1s;
-}
+  main .content {
+    margin: 3vw 10vw;
+  }
 
+  .demo p a:hover {
+    opacity: 0.75;
+    transition: opacity 1s;
+  }
+
+  .demo p a:not(:hover) {
+    opacity: 1;
+    transition: opacity 1s;
+  }
 }
 @media all and (min-width: 700px) and (max-width: 836px) {
   .content h1 {
-    letter-spacing: .2rem;
+    letter-spacing: 0.2rem;
   }
+
   .demo p {
     display: flex;
     flex-direction: column;
   }
+
   .demo p a {
     margin-bottom: 1rem;
     margin-right: 0;
@@ -330,3 +344,5 @@ main .content {
     text-align: center;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
