--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,168 @@
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
   box-sizing: border-box;
   font-size: 62.5%;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
+body {
+  margin: 0;
+}
+
+main {
+  display: block;
+}
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+a {
+  background-color: transparent;
+}
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted;
+}
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+code, kbd, samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+img {
+  border-style: none;
+}
+
+button, input, optgroup, select, textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button, input {
+  overflow: visible;
+}
+
+button, select {
+  text-transform: none;
+}
+
+button, [type=button], [type=reset], [type=submit] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type=search] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+details {
+  display: block;
+}
+
+summary {
+  display: list-item;
+}
+
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
 }
 
 h1, h2 {
@@ -24,6 +182,29 @@ header {
   margin: 3vw 10vw;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #a0a1ac;
+  text-align: center;
+  margin: 5vw;
+}
+
+@media all and (min-width: 700px) {
+  main {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+  main .content {
+    margin: 3vw 10vw;
+  }
+}
 .background-shape {
   background-color: #eef3f6;
   position: absolute;
@@ -39,11 +220,6 @@ header {
 .logo img {
   width: 30px;
   height: 30px;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
 }
 
 .header-img img {
@@ -107,15 +283,6 @@ main {
   margin-right: 1rem;
   font-weight: 700;
   opacity: 1;
-}
-
-footer {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  color: #a0a1ac;
-  text-align: center;
-  margin: 5vw;
 }
 
 .top-nav .menu-toggle {
@@ -307,14 +474,6 @@ footer {
     margin: 1.5rem 0;
     position: absolute;
     left: 0;
-  }
-
-  main {
-    flex-direction: row-reverse;
-    justify-content: space-between;
-  }
-  main .content {
-    margin: 3vw 10vw;
   }
 
   .demo p a:hover {
