--- a/styles/05-components/_components.sass
+++ b/styles/05-components/_components.sass
@@ -22,7 +22,7 @@
 	margin: 10vw
 	h1
 		color: $grayishBlue
-		font-family: $lightGrayishBlue
+		font-family: $mainFontFamily
 		font-size: 1.6rem
 		text-transform: uppercase
 		letter-spacing: 0.5rem
@@ -83,7 +83,7 @@
 		width: 40px
 		height: 40px
 		padding: 1rem
-		display: flex j
+		display: flex
 		justify-content: center
 		align-items: center
 
