--- a/styles/style.css
+++ b/styles/style.css
@@ -231,7 +231,7 @@ footer {
 }
 .content h1 {
   color: #a0a1ac;
-  font-family: #eef3f6;
+  font-family: "Barlow", sans-serif;
   font-size: 1.6rem;
   text-transform: uppercase;
   letter-spacing: 0.5rem;
@@ -299,7 +299,7 @@ footer {
   width: 40px;
   height: 40px;
   padding: 1rem;
-  display: flex j;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
