--- a/styles/05-components/_components.sass
+++ b/styles/05-components/_components.sass
@@ -21,24 +21,21 @@
 .content
 	margin: 10vw
 	h1
-		color: $grayishBlue
-		font-family: $mainFontFamily
-		font-size: 1.6rem
 		text-transform: uppercase
 		letter-spacing: 0.5rem
-		font-weight: 400
 		margin: 0
+		@include fontBasic($size: 1.6rem)
 	h2
-		color: $veryDarkBlue
 		text-transform: uppercase
-		font-size: 4rem
-		font-weight: 700
 		margin: 1.5rem 0
 		line-height: 4rem
+		@include fontBasic($size: 4rem, $weight: 700, $color: $veryDarkBlue)
+
 	h3
 		font-family: $mainFontFamily
 		font-size: 2rem
 		color: $darkGrayishBlue
+		@include fontBasic($size: 2rem, $color: $darkGrayishBlue)
 
 .highlight
 	padding: 0.25rem 1rem
