--- a/styles/03-elements/_elements.sass
+++ b/styles/03-elements/_elements.sass
@@ -1,4 +1,5 @@
 @import '../00-settings/_settings'
+@import '../01-tools/_tools'
 
 h1, h2
 	font-family: $secondaryFontFamily
@@ -7,23 +8,19 @@ ul
 	padding: 0
 	margin: 0
 header
-	display: flex
-	justify-content: space-between
-	align-items: center
 	height: 7.5rem
 	margin: 3vw 10vw
+	@include flexBasic(space-between, center)
 
 main
 	display: flex
 	flex-direction: column
 
 footer
-	display: flex
-	justify-content: center
-	align-content: center
 	color: $grayishBlue
 	text-align: center
 	margin: 5vw
+	@include flexBasic(center, center)
 
 @media all and (min-width: 700px)
 	main
