--- a/styles/05-components/_components.sass
+++ b/styles/05-components/_components.sass
@@ -20,49 +20,40 @@
 
 .content
 	margin: 10vw
-	h1
-		text-transform: uppercase
-		letter-spacing: 0.5rem
-		margin: 0
-		@include fontBasic($size: 1.6rem)
-	h2
-		text-transform: uppercase
-		margin: 1.5rem 0
-		line-height: 4rem
-		@include fontBasic($size: 4rem, $weight: 700, $color: $veryDarkBlue)
-
-	h3
-		font-family: $mainFontFamily
-		font-size: 2rem
-		color: $darkGrayishBlue
-		@include fontBasic($size: 2rem, $color: $darkGrayishBlue)
+	display: flex
+	flex-direction: column
+	align-content: start
 
 .highlight
+	display: flex
+	justify-content: center
+	width: 7.5rem
 	padding: 0.25rem 1rem
 	background-color: $veryDarkBlue
 	color: #fff
 	letter-spacing: 0.1rem
 	border-radius: 15px
-	margin-right: 1rem
 	font-weight: 700
 
 .demo
-	margin: 4rem 0
+	margin: 1rem 0
+	display: flex
+	flex-direction: column
 	p
 		color: $grayishBlue
 		font-family: $secondaryFontFamily
-		font-size: 1.3rem
+		font-size: 1rem
 		text-transform: uppercase
 		letter-spacing: 0.2rem
+		line-height: 1
 		font-weight: 400
 		a
-			padding: 1.25rem 2rem
+			padding: 1.25rem 1rem
 			background-color: $primaryRed
 			color: #fff
 			text-decoration: none
 			letter-spacing: 0.1rem
 			border-radius: 5px
-			margin-right: 1rem
 			font-weight: 700
 			opacity: 1
 
@@ -137,10 +128,9 @@
 .top-nav .mobile-menu ul li
 	font-family: $secondaryFontFamily
 	font-weight: 700
-	font-size: 1.5rem
+	font-size: 1.2rem
 	letter-spacing: 0.1rem
 	text-transform: uppercase
-	color: $veryDarkBlue
 
 .top-nav .mobile-menu ul li a
 	display: block
@@ -162,33 +152,37 @@
 	visibility: visible
 	opacity: 1
 
-@media all and (max-width: 370px)
-	.content
-		display: flex
-		flex-direction: column
-		align-content: center
-		text-align: center
-		h1
-			letter-spacing: 0.2rem
+@include for-phone-up
+	.highlight
+		margin-right: 1.5rem
+		background-color: $veryDarkBlue
+		color: #fff
 
 	.demo
-		margin: 2rem 0
+		flex-direction: row
 		p
-			display: flex
-			flex-direction: column
-			align-items: center
-			a
-				margin-bottom: 1rem
-				margin-right: 0
-				width: 60%
-				text-align: center
+			font-size: 1.05rem
+		a
+			margin-right: 1rem
 
-@media all and (min-width: 700px)
+@include for-tablet-portrait-up
 	.background-shape
 		width: 50vw
 		height: 30vw
 		max-height: 500px
 
+	.content
+		margin: 3vw 10vw
+
+	.demo p a:hover
+		opacity: 0.75
+		transition: opacity 1s
+
+	.demo p a:not(:hover)
+		opacity: 1
+		transition: opacity 1s
+
+@include for-tablet-landscape-up
 	.top-nav .hamburger, .top-nav .menu-toggle
 		display: none
 
@@ -208,14 +202,14 @@
 				display: flex
 				li a
 					padding: 1rem 2rem
-					color: $grayishBlue
+					color: $darkGrayishBlue
 					text-decoration: none
 				li a:hover
 					cursor: pointer
 					text-decoration: underline
 				li:last-child
-					padding: 0 1rem
-					margin: 0 1rem
+					padding: 0 2rem
+					margin: 0 2rem
 					border: none
 					position: relative
 
@@ -226,28 +220,6 @@
 		background-color: $grayishBlue
 		border-radius: 50%
 		display: inline-block
-		margin: 1.5rem 0
 		position: absolute
 		left: 0
-
-	.demo p a:hover
-		opacity: 0.75
-		transition: opacity 1s
-
-	.demo p a:not(:hover)
-		opacity: 1
-		transition: opacity 1s
-
-@media all and (min-width: 700px) and (max-width: 836px)
-	.content h1
-		letter-spacing: 0.2rem
-
-	.demo p
-		display: flex
-		flex-direction: column
-
-	.demo p a
-		margin-bottom: 1rem
-		margin-right: 0
-		width: 60%
-		text-align: center
+		margin-top: 1rem
