--- a/styles/03-elements/_elements.sass
+++ b/styles/03-elements/_elements.sass
@@ -1,12 +1,29 @@
 @import '../00-settings/_settings'
 @import '../01-tools/_tools'
 
-h1, h2
-	font-family: $secondaryFontFamily
+h1
+	text-transform: uppercase
+	letter-spacing: 0.3rem
+	line-height: 2.4rem
+	margin: 0
+	@include fontBasic($size: 1.5rem)
+
+h2
+	text-transform: uppercase
+	margin: 1.5rem 0
+	line-height: 4rem
+	@include fontBasic($size: 4rem, $weight: 700, $color: $veryDarkBlue)
+
+h3
+	font-family: $mainFontFamily
+	font-size: 2rem
+	color: $darkGrayishBlue
+	@include fontBasic($size: 2rem, $color: $darkGrayishBlue)
 
 ul
 	padding: 0
 	margin: 0
+
 header
 	height: 7.5rem
 	margin: 3vw 10vw
@@ -22,9 +39,15 @@ footer
 	margin: 5vw
 	@include flexBasic(center, center)
 
-@media all and (min-width: 700px)
+@include for-phone-up
+	h1
+		display: flex
+		flex-direction: row
+		justify-content: start
+		font-size: 1.25rem
+		letter-spacing: .3rem
+
+@include for-tablet-portrait-up
 	main
 		flex-direction: row-reverse
 		justify-content: space-between
-		.content
-			margin: 3vw 10vw
