--- a/styles/style.css
+++ b/styles/style.css
@@ -165,8 +165,35 @@ template {
   display: none;
 }
 
-h1, h2 {
-  font-family: "Barlow Condensed", sans-serif;
+h1 {
+  text-transform: uppercase;
+  letter-spacing: 0.3rem;
+  line-height: 2.4rem;
+  margin: 0;
+  font-family: "Barlow", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: #a0a1ac;
+}
+
+h2 {
+  text-transform: uppercase;
+  margin: 1.5rem 0;
+  line-height: 4rem;
+  font-family: "Barlow", sans-serif;
+  font-size: 4rem;
+  font-weight: 700;
+  color: #242942;
+}
+
+h3 {
+  font-family: "Barlow", sans-serif;
+  font-size: 2rem;
+  color: #5b5f71;
+  font-family: "Barlow", sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+  color: #5b5f71;
 }
 
 ul {
@@ -196,13 +223,19 @@ footer {
   align-items: center;
 }
 
+@media all and (min-width: 400px) {
+  h1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    font-size: 1.25rem;
+    letter-spacing: 0.3rem;
+  }
+}
 @media all and (min-width: 700px) {
   main {
     flex-direction: row-reverse;
     justify-content: space-between;
-  }
-  main .content {
-    margin: 3vw 10vw;
   }
 }
 .background-shape {
@@ -228,64 +261,44 @@ footer {
 
 .content {
   margin: 10vw;
-}
-.content h1 {
-  text-transform: uppercase;
-  letter-spacing: 0.5rem;
-  margin: 0;
-  font-family: "Barlow", sans-serif;
-  font-size: 1.6rem;
-  font-weight: 400;
-  color: #a0a1ac;
-}
-.content h2 {
-  text-transform: uppercase;
-  margin: 1.5rem 0;
-  line-height: 4rem;
-  font-family: "Barlow", sans-serif;
-  font-size: 4rem;
-  font-weight: 700;
-  color: #242942;
-}
-.content h3 {
-  font-family: "Barlow", sans-serif;
-  font-size: 2rem;
-  color: #5b5f71;
-  font-family: "Barlow", sans-serif;
-  font-size: 2rem;
-  font-weight: 400;
-  color: #5b5f71;
+  display: flex;
+  flex-direction: column;
+  align-content: start;
 }
 
 .highlight {
+  display: flex;
+  justify-content: center;
+  width: 7.5rem;
   padding: 0.25rem 1rem;
   background-color: #242942;
   color: #fff;
   letter-spacing: 0.1rem;
   border-radius: 15px;
-  margin-right: 1rem;
   font-weight: 700;
 }
 
 .demo {
-  margin: 4rem 0;
+  margin: 1rem 0;
+  display: flex;
+  flex-direction: column;
 }
 .demo p {
   color: #a0a1ac;
   font-family: "Barlow Condensed", sans-serif;
-  font-size: 1.3rem;
+  font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
+  line-height: 1;
   font-weight: 400;
 }
 .demo p a {
-  padding: 1.25rem 2rem;
+  padding: 1.25rem 1rem;
   background-color: #ff5c5c;
   color: #fff;
   text-decoration: none;
   letter-spacing: 0.1rem;
   border-radius: 5px;
-  margin-right: 1rem;
   font-weight: 700;
   opacity: 1;
 }
@@ -370,10 +383,9 @@ footer {
 .top-nav .mobile-menu ul li {
   font-family: "Barlow Condensed", sans-serif;
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
-  color: #242942;
 }
 
 .top-nav .mobile-menu ul li a {
@@ -400,30 +412,21 @@ footer {
   opacity: 1;
 }
 
-@media all and (max-width: 370px) {
-  .content {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    text-align: center;
-  }
-  .content h1 {
-    letter-spacing: 0.2rem;
+@media all and (min-width: 400px) {
+  .highlight {
+    margin-right: 1.5rem;
+    background-color: #242942;
+    color: #fff;
   }
 
   .demo {
-    margin: 2rem 0;
+    flex-direction: row;
   }
   .demo p {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    font-size: 1.05rem;
   }
-  .demo p a {
-    margin-bottom: 1rem;
-    margin-right: 0;
-    width: 60%;
-    text-align: center;
+  .demo a {
+    margin-right: 1rem;
   }
 }
 @media all and (min-width: 700px) {
@@ -433,6 +436,21 @@ footer {
     max-height: 500px;
   }
 
+  .content {
+    margin: 3vw 10vw;
+  }
+
+  .demo p a:hover {
+    opacity: 0.75;
+    transition: opacity 1s;
+  }
+
+  .demo p a:not(:hover) {
+    opacity: 1;
+    transition: opacity 1s;
+  }
+}
+@media all and (min-width: 900px) {
   .top-nav .hamburger, .top-nav .menu-toggle {
     display: none;
   }
@@ -455,7 +473,7 @@ footer {
   }
   .top-nav .mobile-menu ul li a {
     padding: 1rem 2rem;
-    color: #a0a1ac;
+    color: #5b5f71;
     text-decoration: none;
   }
   .top-nav .mobile-menu ul li a:hover {
@@ -463,8 +481,8 @@ footer {
     text-decoration: underline;
   }
   .top-nav .mobile-menu ul li:last-child {
-    padding: 0 1rem;
-    margin: 0 1rem;
+    padding: 0 2rem;
+    margin: 0 2rem;
     border: none;
     position: relative;
   }
@@ -476,36 +494,9 @@ footer {
     background-color: #a0a1ac;
     border-radius: 50%;
     display: inline-block;
-    margin: 1.5rem 0;
     position: absolute;
     left: 0;
-  }
-
-  .demo p a:hover {
-    opacity: 0.75;
-    transition: opacity 1s;
-  }
-
-  .demo p a:not(:hover) {
-    opacity: 1;
-    transition: opacity 1s;
-  }
-}
-@media all and (min-width: 700px) and (max-width: 836px) {
-  .content h1 {
-    letter-spacing: 0.2rem;
-  }
-
-  .demo p {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .demo p a {
-    margin-bottom: 1rem;
-    margin-right: 0;
-    width: 60%;
-    text-align: center;
+    margin-top: 1rem;
   }
 }
 
