--- a/styles/style.css
+++ b/styles/style.css
@@ -365,9 +365,9 @@ footer {
 
 .top-nav .mobile-menu {
   width: 80%;
-  visibility: hidden;
   opacity: 0;
-  transition: all 0.4s ease;
+  pointer-events: none;
+  transition: opacity 0.4s ease;
 }
 
 .top-nav .mobile-menu ul {
@@ -437,7 +437,27 @@ footer {
   }
 
   .content {
-    margin: 3vw 10vw;
+    margin: 3vw 3vw 3vw 10vw;
+  }
+
+  .demo p {
+    color: #a0a1ac;
+    font-family: "Barlow Condensed", sans-serif;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    line-height: 1;
+    font-weight: 400;
+  }
+  .demo p a {
+    padding: 1.25rem 1rem;
+    background-color: #ff5c5c;
+    color: #fff;
+    text-decoration: none;
+    letter-spacing: 0.1rem;
+    border-radius: 5px;
+    font-weight: 700;
+    opacity: 1;
   }
 
   .demo p a:hover {
@@ -459,8 +479,8 @@ footer {
     position: relative;
   }
   .top-nav .mobile-menu {
-    visibility: visible;
     opacity: 1;
+    pointer-events: all;
   }
   .top-nav .mobile-menu ul {
     margin-top: 0;
