--- a/styles/05-components/_components.sass
+++ b/styles/05-components/_components.sass
@@ -15,11 +15,15 @@
 	width: 30px
 	height: 30px
 
+.header-img
+	margin-top: 3vw
+
 .header-img img
 	width: 100%
 
 .content
-	margin: 10vw
+	margin: 5vw 0 0 7.5vw
+	padding-right: 3vw
 	display: flex
 	flex-direction: column
 	align-content: start
@@ -27,18 +31,18 @@
 .highlight
 	display: flex
 	justify-content: center
-	width: 7.5rem
+	width: 7rem
 	padding: 0.25rem 1rem
 	background-color: $veryDarkBlue
 	color: #fff
 	letter-spacing: 0.1rem
 	border-radius: 15px
 	font-weight: 700
+	margin-right: 1rem
 
 .demo
 	margin: 1rem 0
 	display: flex
-	flex-direction: column
 	p
 		color: $grayishBlue
 		font-family: $secondaryFontFamily
@@ -49,6 +53,7 @@
 		font-weight: 400
 		a
 			padding: 1.25rem 1rem
+			margin-right: 1rem
 			background-color: $primaryRed
 			color: #fff
 			text-decoration: none
@@ -167,12 +172,12 @@
 
 @include for-tablet-portrait-up
 	.background-shape
-		width: 50vw
+		width: 45vw
 		height: 30vw
-		max-height: 500px
+		max-height: 350px
 
 	.content
-		margin: 3vw 3vw 3vw 10vw
+		margin-left: 10vw
 
 	.demo
 		p
@@ -202,6 +207,10 @@
 		transition: opacity 1s
 
 @include for-tablet-landscape-up
+	.content
+		margin-left: 10vw
+		padding-right: 5rem
+
 	.top-nav .hamburger, .top-nav .menu-toggle
 		display: none
 
@@ -242,3 +251,8 @@
 		position: absolute
 		left: 0
 		margin-top: 1rem
+
+@include for-desktop-up
+	.content
+		margin-left: 10vw
+		padding-right: 5rem
