adjusted navigation size based on breakpoint

--- a/styles/05-components/_components.sass
+++ b/styles/05-components/_components.sass
@@ -254,6 +254,12 @@
 		margin-top: 1rem
 
 @include for-desktop-up
+	.top-nav .mobile-menu ul li
+		font-size: 1.25rem
+
+	.top-nav .mobile-menu ul li:last-child::before
+		margin-top: 1.25rem
+
 	.content
 		margin-left: 10vw
 		padding-right: 5rem
