--- a/styles/style.css
+++ b/styles/style.css
@@ -401,6 +401,7 @@ footer {
 .top-nav .mobile-menu ul li {
   font-family: "Barlow Condensed", sans-serif;
   font-weight: 700;
+  font-size: 1.2rem;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
 }
@@ -542,6 +543,14 @@ footer {
   }
 }
 @media all and (min-width: 1200px) {
+  .top-nav .mobile-menu ul li {
+    font-size: 1.35rem;
+  }
+
+  .top-nav .mobile-menu ul li:last-child::before {
+    margin-top: 1.35rem;
+  }
+
   .content {
     margin-left: 10vw;
     padding-right: 5rem;
