--- a/styles/03-elements/_elements.sass
+++ b/styles/03-elements/_elements.sass
@@ -4,17 +4,17 @@
 h1
 	display: flex
 	flex-direction: row
+	align-items: center
 	text-transform: uppercase
 	letter-spacing: 0.2rem
-	line-height: 2.4rem
 	margin-right: 0
-	@include fontBasic($size: 1.2rem)
+	@include fontBasic($family: $secondaryFontFamily, $size: 2rem, $weight: 400)
 
 h2
 	text-transform: uppercase
 	margin: 1.5rem 0
 	line-height: 4rem
-	@include fontBasic($size: 4rem, $weight: 700, $color: $veryDarkBlue)
+	@include fontBasic($family: $secondaryFontFamily, $size: 4rem, $weight: 700, $color: $veryDarkBlue)
 
 h3
 	@include fontBasic($size: 2rem, $color: $darkGrayishBlue)
@@ -40,10 +40,8 @@ footer
 
 @include for-phone-up
 	h1
-
 		justify-content: start
-		align-items: center
-		font-size: 1.25rem
+		font-size: 2rem
 		letter-spacing: .3rem
 
 @include for-tablet-portrait-up
